# DashView

./: LICENSE  README.md
client/: Dockerfile  package-lock.json  package.json
client/src/: App.vue  main.ts  socket.ts
client/src/components/: AppBar.vue  DigitalClock.vue
client/src/components/Blocks/: AmbientDataBlock.vue  HeaterBlock.vue  TrashBlock.vue
client/src/locales/: en.json  it.json
client/src/stores/: store.ts
server/: Dockerfile  pyproject.toml
server/server/: __init__.py  custom_timer.py  devices.py  endpoints.py  main.py  trash_manager.py
